[package]
name = "libsql-durable"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
duroxide = "0.1.29"
libsql = { version = "0.10.0-pre.4", optional = true }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"], optional = true }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
serde_json = "1"

[features]
default = ["compat-sqlite"]
compat-sqlite = ["duroxide/sqlite", "dep:sqlx"]
native-libsql = ["dep:libsql"]

[dev-dependencies]
duroxide = { version = "0.1.29", features = ["provider-test"] }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
