[package]
name = "libsql-durable"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
duroxide = "0.1.29"
libsql = { version = "0.10.0-pre.4", optional = true, features = ["encryption"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"], optional = true }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
serde_json = "1"
bytes = { version = "1", optional = true }

[features]
default = ["compat-sqlite"]
compat-sqlite = ["duroxide/sqlite", "dep:sqlx"]
# Enables real libSQL SDK (local/remote/replica/offline) including local encryption.
native-libsql = ["dep:libsql", "dep:bytes"]

[dev-dependencies]
duroxide = { version = "0.1.29", features = ["provider-test"] }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[[example]]
name = "agent_loop"
required-features = ["native-libsql"]

[[example]]
name = "agent_nvidia"
required-features = ["native-libsql"]
